# robinhood_ynab_integration

./: LICENSE.txt  README.md  main.py  pyproject.toml  requirements.txt  sync_rh_to_ynab.py
rh_ynab_sync/: __init__.py  sync.py  transfers.py
rh_ynab_sync/robinhood/: assets.py  transfers.py
rh_ynab_sync/ynab/: accounts.py  transactions.py
